Fix club-scoped area login
